chore: cleanup unused files and update .gitignore
- Remove ad-hoc SQL fix scripts (fix_hash*.sql, fix_passwords.sql)

- Remove backend log files (error.log, error2.log, maven_log.txt)

- Update .gitignore with Playwright and log patterns